--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array> <string>com.googleusercontent.apps.406532923410-1taf79lfbaugh7j92ncfflsro6bvllbi</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
